// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`canonical-references formatCanonicalReferencesMarkdown full output matches snapshot 1`] = `
"## Canonical References

Machine-readable manifest: \`canonical-references.json\` (synced to \`~/.kimi-code/\`). Regenerate: \`bun run references:generate\`.

### Ecosystem

| Stack | Status | Docs | Source repo | Usage in this repo |
| :--- | :--- | :--- | :--- | :--- |
| Bun | ✅ active | [docs](https://bun.com/docs) | [Bun (oven-sh)](https://github.com/oven-sh/bun) | Runtime, test runner, package manager, and native I/O for kimi-toolchain |
| Effect | ✅ active | [docs](https://effect.website/docs) | [Effect](https://github.com/Effect-TS/effect) | Typed errors, CLI/runtime adapters, and Herdr pane orchestration in src/lib/effect/ |
| Kimi Code | ✅ active | [docs](https://moonshotai.github.io/kimi-code/en/reference/kimi-command.html) | [Kimi Code (Moonshot)](https://github.com/MoonshotAI/kimi-code) | Official agent CLI (\`kimi\`), config.toml, sessions, MCP — distinct from \`kimi-doctor\` |
| Herdr | ✅ active | [docs](https://herdr.dev/docs/) | — | Terminal-native multiplexer; socket API for herdr-pane, herdr-latm, herdr-orchestrator |
| Cloudflare Platform | ✅ active | [docs](https://developers.cloudflare.com/workers/) | — | Workers, Access, MCP; use kimi-cloudflare-access for API tokens (separate from Wrangler OAuth) |
| Cloudflare MCP | ✅ active | [docs](https://developers.cloudflare.com/agents/model-context-protocol/) | — | Default user MCP \`cloudflare-api\`; optional docs/bindings/builds/observability endpoints |
| DX | ✅ active | \`~/.config/dx/AGENTS.md\` | — | Global Bun dev platform — \`dx config\`, \`dx mcp-status\`, \`dx.config.toml\` herdr/finishWork |
| js-yaml | ✅ active | [docs](https://github.com/nodeca/js-yaml#readme) | — | YAML parsing for error-taxonomy.yml and config files; minimal runtime dependency alongside effect |
| Oxc (oxfmt / oxlint) | ✅ active | [docs](https://oxc.rs/docs/guide/usage/formatter.html) | [Oxc](https://github.com/oxc-project/oxc) | Format (oxfmt) and lint (oxlint) gates — no ESLint/Prettier in this repo |

### Local docs (cached after sync)

| Repo | Runtime | Purpose |
| :--- | :--- | :--- |
| \`AGENTS.md\` | \`~/.kimi-code/AGENTS.md\` | Toolchain agent guide |
| \`CODE_REFERENCES.md\` | \`~/.kimi-code/CODE_REFERENCES.md\` | Local coding exemplars; doc-links lint and @see ladder |
| \`UNIFIED.md\` | \`~/.kimi-code/UNIFIED.md\` | Kimi Code vs kimi-toolchain matrix |
| \`DEEP-QUALITY.md\` | \`~/.kimi-code/DEEP-QUALITY.md\` | Effect-discipline floor and gate JSON shapes; kimi-heal --fix bare-promise repair and KIMI_MODULES=doctor scaffold |
| \`TEMPLATES.md\` | \`~/.kimi-code/TEMPLATES.md\` | Scaffold templates — profiles, snippets, bun create flow, kimi-fix usage |
| \`docs/references/dashboard-thumbnails.md\` | \`~/.kimi-code/docs/references/dashboard-thumbnails.md\` | Herdr dashboard thumbnail pipeline; meta.webview; WebView dataStore vs in-memory cache |
| \`docs/references/kimi-doctor.md\` | \`~/.kimi-code/docs/references/kimi-doctor.md\` | Dashboard automation gate (kimi-doctor --automation): CLI, JSON schema, exit codes, and failure modes |
| \`docs/references/serve-probe.md\` | \`~/.kimi-code/docs/references/serve-probe.md\` | kimi-doctor --serve-probe HTTP routes, [doctor.probe] dx.config.toml, artifact list API, and Herdr tab wiring |
| \`docs/references/herdr-socket-saturation-protocol.md\` | \`~/.kimi-code/docs/references/herdr-socket-saturation-protocol.md\` | Herdr EAGAIN (os error 35) taxonomy, fix-socket --dry-run/--live contract, respawn protection, and Mac mini runbook |
| \`docs/references/namespace.md\` | \`~/.kimi-code/docs/references/namespace.md\` | Toolchain vs Herdr plugin namespace; doctor trinity (kimi-doctor, herdr-doctor bin/plugin, kimi doctor); global ecosystem; finish-work vs prefix keybindings |
| \`docs/references/configuration-layers.md\` | \`~/.kimi-code/docs/references/configuration-layers.md\` | Four-layer model: discovery (canonical-references), define registry (constants-manifest), cross-repo parity (constants-parity.toml), app scaffold (templates/scaffold/bunfig.toml) |
| \`docs/references/canonical-references-system.md\` | \`~/.kimi-code/docs/references/canonical-references-system.md\` | Manifest schema, generation pipeline, freshness/drift mechanics, lint layers, and consumer graph for canonical-references.json |
| \`docs/references/shell-spawn-choice.md\` | \`~/.kimi-code/docs/references/shell-spawn-choice.md\` | invokeTool vs Bun.spawn vs governedSpawn decision matrix |
| \`docs/references/v53-architecture.md\` | \`~/.kimi-code/docs/references/v53-architecture.md\` | Dashboard card registry and canvas↔card influence map |
| \`docs/references/bun-runtime-scaffold.md\` | \`~/.kimi-code/docs/references/bun-runtime-scaffold.md\` | Bun install config (bunfig.toml merge order, defaults, env vars, backend, cache/lazy install) |
| \`docs/references/bunfig-config.md\` | \`~/.kimi-code/docs/references/bunfig-config.md\` | Bunfig.toml runtime, test, serve, and bun run configuration reference |
| \`docs/references/bun-install-config.md\` | \`~/.kimi-code/docs/references/bun-install-config.md\` | Bun install configuration reference: [install], scopes, cache, and platform selectors |
| \`docs/references/bun-types.md\` | \`~/.kimi-code/docs/references/bun-types.md\` | Bun TypeScript types reference: bun-types package, @types/bun shim, and local checkout pinning |
| \`docs/references/bun-test-api.md\` | \`~/.kimi-code/docs/references/bun-test-api.md\` | Bun test runner API reference: bun:test, matchers, mocks, snapshots, and lifecycle hooks |
| \`docs/references/testing-execution.md\` | \`~/.kimi-code/docs/references/testing-execution.md\` | Four-script test execution model — selection (fast/changed/parallel/shard), distribution (file not describe), --changed safety net |
| \`docs/references/bun-shell-companions.md\` | \`~/.kimi-code/docs/references/bun-shell-companions.md\` | Bun $ template vs subprocess and inspect companion patterns |
| \`docs/references/bun-file-streaming.md\` | \`~/.kimi-code/docs/references/bun-file-streaming.md\` | Bun.file/Bun.write streaming decisions for configs, JSONL ledgers, large artifacts, transformed streams, and HTTP responses |
| \`docs/references/template-matrix.md\` | \`~/.kimi-code/docs/references/template-matrix.md\` | Template families matrix: scaffold breakdown (22 files), bridge pattern collision resolution, runtime sync paths, profile differentiation |
| \`docs/references/herdr-plugin-architecture.md\` | \`~/.kimi-code/docs/references/herdr-plugin-architecture.md\` | Herdr unified plugin plan v0.5.0 — prefix+* actions, STATE_DIR topology; orthogonal to [finishWork].gates |
| \`examples/artifact-dependency-graphs.md\` | \`~/.kimi-code/examples/artifact-dependency-graphs.md\` | Run manifests, artifact lineage (dependsOn vs gate-graph), and session-scoped identity queries |
| \`docs/references/serve-probe.md\` | \`~/.kimi-code/docs/references/serve-probe.md\` | Live Herdr dashboard gate-health overlay — effect-gates probe, browser poll, server watch |
| \`docs/references/kimi-doctor.md\` | \`~/.kimi-code/docs/references/kimi-doctor.md\` | BenchmarkApiEnvelope SSOT — runEffectBenchmarkCardLoop shared by CLI, dashboard, and serve-probe |
| \`docs/agent-api.md\` | \`~/.kimi-code/docs/agent-api.md\` | Effect-native agent API surface: KimiCapabilities, KimiTrace, KimiContract, DecisionLogger services — use instead of CLI shelling out inside Effect programs |
| \`docs/finish-work-close-loop.md\` | \`~/.kimi-code/docs/finish-work-close-loop.md\` | Finish-work close-loop architecture: gates → git → dirty check → reviewer escalation → orchestrator signal; dx.config.toml [finishWork] and [herdr.orchestrator] wiring |
| \`docs/handoff-rules.md\` | \`~/.kimi-code/docs/handoff-rules.md\` | Herdr orchestrator handoff rules: TOML format, condition syntax (done/blocked/idle/probe:*), report-native when-clauses, and cross-workspace agent routing |
| \`docs/naming.md\` | \`~/.kimi-code/docs/naming.md\` | CLI naming notes and deprecation register: --session-report → --effect-floor; kimi-doctor vs herdr-doctor vs kimi doctor disambiguation shortcuts |
| \`canonical-references.json\` | \`~/.kimi-code/canonical-references.json\` | Cached canonical ecosystem links (this manifest) |

### Repositories

| Key | Project | Source | Clone path | Role / provides |
| :--- | :--- | :--- | :--- | :--- |
| \`bun-upstream\` | Bun (oven-sh) | [oven-sh/bun](https://github.com/oven-sh/bun) | — | upstream / bun |
| \`kimi-toolchain\` | kimi-toolchain | [brendadeeznuts1111/kimi-toolchain](https://github.com/brendadeeznuts1111/kimi-toolchain) | \`~/kimi-toolchain\` | tool |
| \`kimi-code-upstream\` | Kimi Code (Moonshot) | [MoonshotAI/kimi-code](https://github.com/MoonshotAI/kimi-code) | — | upstream / kimi-code |
| \`effect-upstream\` | Effect | [Effect-TS/effect](https://github.com/Effect-TS/effect) | — | upstream / effect |
| \`oxc-upstream\` | Oxc | [oxc-project/oxc](https://github.com/oxc-project/oxc) | — | upstream / oxc |
"
`;

exports[`canonical-references formatCanonicalReferencesMarkdown compact output matches snapshot 1`] = `
"## Canonical References

Cached manifest: \`canonical-references.json\` (\`bun run references:generate\`; synced to \`~/.kimi-code/\`). Stacks: Bun, Effect, Kimi Code, Herdr, Cloudflare Platform, Cloudflare MCP, DX, js-yaml, Oxc (oxfmt / oxlint). Full tables: \`CODE_REFERENCES.md\` § Canonical ecosystem links.

"
`;

exports[`canonical-references formatCanonicalReferencesInspectPlain full output matches snapshot 1`] = `
"
Ecosystem references:
┌───┬────────────────┬──────────┬─────────┬────────────┬───────────┬────────────────────┬──────────────────────┐
│   │ id             │ kind     │ package │ minVersion │ status    │ repoId             │ sourceRepo           │
├───┼────────────────┼──────────┼─────────┼────────────┼───────────┼────────────────────┼──────────────────────┤
│ 0 │ bun            │ runtime  │ bun     │ 1.4.0      │ ✅ active │ bun-upstream       │ Bun (oven-sh)        │
│ 1 │ effect         │ library  │ effect  │ 3.21.3     │ ✅ active │ effect-upstream    │ Effect               │
│ 2 │ kimi-code      │ product  │ —       │ —          │ ✅ active │ kimi-code-upstream │ Kimi Code (Moonshot) │
│ 3 │ herdr          │ product  │ —       │ —          │ ✅ active │ (noRepo)           │ —                    │
│ 4 │ cloudflare     │ platform │ —       │ —          │ ✅ active │ (noRepo)           │ —                    │
│ 5 │ cloudflare-mcp │ mcp      │ —       │ —          │ ✅ active │ (noRepo)           │ —                    │
│ 6 │ dx             │ product  │ —       │ —          │ ✅ active │ (noRepo)           │ —                    │
│ 7 │ js-yaml        │ library  │ js-yaml │ 4.1.0      │ ✅ active │ (noRepo)           │ —                    │
│ 8 │ oxc            │ library  │ oxfmt   │ —          │ ✅ active │ oxc-upstream       │ Oxc                  │
└───┴────────────────┴──────────┴─────────┴────────────┴───────────┴────────────────────┴──────────────────────┘


Repository references:
┌───┬────────────────────┬──────────┬───────────┬──────────────────┬───────────────────────────────────┐
│   │ id                 │ role     │ provides  │ clonePath        │ source                            │
├───┼────────────────────┼──────────┼───────────┼──────────────────┼───────────────────────────────────┤
│ 0 │ bun-upstream       │ upstream │ bun       │ —                │ oven-sh/bun                       │
│ 1 │ kimi-toolchain     │ tool     │ —         │ ~/kimi-toolchain │ brendadeeznuts1111/kimi-toolchain │
│ 2 │ kimi-code-upstream │ upstream │ kimi-code │ —                │ MoonshotAI/kimi-code              │
│ 3 │ effect-upstream    │ upstream │ effect    │ —                │ Effect-TS/effect                  │
│ 4 │ oxc-upstream       │ upstream │ oxc       │ —                │ oxc-project/oxc                   │
└───┴────────────────────┴──────────┴───────────┴──────────────────┴───────────────────────────────────┘


Local doc references:
┌────┬──────────────────────────────────┬─────────────────────────────────────────────────────┬────────┬───────────┐
│    │ id                               │ repoPath                                            │ canvas │ readOrder │
├────┼──────────────────────────────────┼─────────────────────────────────────────────────────┼────────┼───────────┤
│  0 │ agents                           │ AGENTS.md                                           │ —      │ —         │
│  1 │ code-references                  │ CODE_REFERENCES.md                                  │ yes    │ 4         │
│  2 │ unified                          │ UNIFIED.md                                          │ yes    │ 1         │
│  3 │ deep-quality                     │ DEEP-QUALITY.md                                     │ yes    │ 9         │
│  4 │ templates                        │ TEMPLATES.md                                        │ yes    │ 5         │
│  5 │ dashboard-thumbnails             │ docs/references/dashboard-thumbnails.md             │ yes    │ 6         │
│  6 │ kimi-doctor                      │ docs/references/kimi-doctor.md                      │ yes    │ 7         │
│  7 │ serve-probe                      │ docs/references/serve-probe.md                      │ —      │ —         │
│  8 │ herdr-socket-saturation-protocol │ docs/references/herdr-socket-saturation-protocol.md │ —      │ —         │
│  9 │ namespace                        │ docs/references/namespace.md                        │ yes    │ 2         │
│ 10 │ configuration-layers             │ docs/references/configuration-layers.md             │ yes    │ 3         │
│ 11 │ canonical-references-system      │ docs/references/canonical-references-system.md      │ —      │ 3         │
│ 12 │ shell-spawn-choice               │ docs/references/shell-spawn-choice.md               │ —      │ —         │
│ 13 │ v53-architecture                 │ docs/references/v53-architecture.md                 │ yes    │ 10        │
│ 14 │ bun-runtime-scaffold             │ docs/references/bun-runtime-scaffold.md             │ —      │ —         │
│ 15 │ bunfig-config                    │ docs/references/bunfig-config.md                    │ —      │ —         │
│ 16 │ bun-install-config               │ docs/references/bun-install-config.md               │ —      │ —         │
│ 17 │ bun-types                        │ docs/references/bun-types.md                        │ —      │ —         │
│ 18 │ bun-test-api                     │ docs/references/bun-test-api.md                     │ —      │ —         │
│ 19 │ testing-execution                │ docs/references/testing-execution.md                │ —      │ —         │
│ 20 │ bun-shell-companions             │ docs/references/bun-shell-companions.md             │ —      │ —         │
│ 21 │ bun-file-streaming               │ docs/references/bun-file-streaming.md               │ —      │ —         │
│ 22 │ template-matrix                  │ docs/references/template-matrix.md                  │ —      │ —         │
│ 23 │ herdr-plugin-architecture        │ docs/references/herdr-plugin-architecture.md        │ yes    │ 8         │
│ 24 │ artifact-lineage                 │ examples/artifact-dependency-graphs.md              │ yes    │ 11        │
│ 25 │ gate-health                      │ docs/references/serve-probe.md                      │ yes    │ 12        │
│ 26 │ benchmark                        │ docs/references/kimi-doctor.md                      │ yes    │ 13        │
│ 27 │ agent-api                        │ docs/agent-api.md                                   │ —      │ —         │
│ 28 │ finish-work-close-loop           │ docs/finish-work-close-loop.md                      │ —      │ —         │
│ 29 │ handoff-rules                    │ docs/handoff-rules.md                               │ —      │ —         │
│ 30 │ naming                           │ docs/naming.md                                      │ —      │ —         │
│ 31 │ canonical-references             │ canonical-references.json                           │ —      │ —         │
└────┴──────────────────────────────────┴─────────────────────────────────────────────────────┴────────┴───────────┘
"
`;

exports[`canonical-references generated TS arrays match snapshot 1`] = `
"/**
 * Canonical reference type definitions and constants.
 *
 * Prepended to auto-generated canonical-references-data.ts so consumers share
 * types without a separate shard or circular imports through canonical-references.ts.
 */

export const CANONICAL_REFERENCES_SCHEMA_VERSION = 1;

export type ReferenceKind =
  | "runtime"
  | "library"
  | "product"
  | "platform"
  | "docs"
  | "repo"
  | "mcp";

export type EcosystemReferenceStatus = "active" | "deprecated" | "experimental" | "external-fork";

export interface EcosystemReference {
  id: string;
  name: string;
  kind: ReferenceKind;
  homepage: string;
  docs: string;
  /** npm package name when applicable */
  package?: string;
  /** When agents should reach for this stack */
  usage: string;
  minVersion?: string;
  install?: string;
  /** Corresponding REPO_REFERENCES id. Falls back to convention \`<id>-upstream\` when absent. */
  repoId?: string;
  /** Set true when no repo entry is expected (e.g. platform services, hosted MCPs). */
  noRepo?: true;
  /** Lifecycle status — agents should avoid deprecated entries. Defaults to "active" when absent. */
  status?: EcosystemReferenceStatus;
  [key: string]: unknown;
}

/**
 * Manifest index row for a local documentation file.
 * These are path pointers and human-readable purposes —
 * NOT \`dx.config.toml\` keys. Boundary semantics (toolchain vs Herdr,
 * global vs project) live in the doc content at id \`namespace\`.
 */
export interface LocalDocReference {
  id: string;
  repoPath: string;
  runtimePath: string;
  purpose: string;
  /** Repo-relative Cursor Canvas path; IDE-only pointer — not synced to ~/.kimi-code/ */
  cursorCanvas?: string;
  /** Canvas display page name (e.g. "Doc links"). Matches CANVAS_ROUTING.page. */
  canvasPage?: string;
  /** Canvas self-identifier (e.g. "doc-links-and-see-ladder"). Matches CANVAS_ROUTING.id. */
  canvasId?: string;
  /** Canvas version string (e.g. "0.1.0"). From CANVAS_ROUTING.version. */
  canvasVersion?: string;
  /** Canvas layer label (e.g. "Doc URL lint"). From CANVAS_ROUTING.layer. */
  canvasLayer?: string;
  /** When to open hint (e.g. "@see ladder · docs/references"). From CANVAS_ROUTING.openWhen. */
  canvasOpenWhen?: string;
  /** Read-order grouping (1=Hub, 2=Config/Namespace, 3=Cross-ref, 4=Scaffold, 5-6=Herdr). */
  canvasReadOrder?: number;
  /** examples/dashboard card ids (\`card-*\`) this canvas influences — v5.4 wiring SSOT */
  canvasInfluences?: readonly string[];
  [key: string]: unknown;
}

export type RepoRole = "upstream" | "tool" | "dependency";

export type RepoLanguage = "typescript" | "rust" | "javascript";

export type RepoFramework = "bun" | "node" | "effect" | "oxc";

export interface RepoReference {
  id: string;
  name: string;
  url: string;
  description?: string;
  defaultBranch?: string;
  ciStatusUrl?: string;
  clonePath?: string;
  /** EcosystemReference ids this repository is the canonical source for. */
  provides?: readonly string[];
  role?: RepoRole;
  language?: RepoLanguage;
  frameworks?: readonly RepoFramework[];
  /** Expected package.json \`name\` when clonePath is validated. Defaults to \`name\`. */
  expectedPackageName?: string;
  [key: string]: unknown;
}

export interface CanonicalReferencesManifest {
  schemaVersion: typeof CANONICAL_REFERENCES_SCHEMA_VERSION;
  generatedAt: string;
  toolchainVersion: string;
  ecosystem: EcosystemReference[];
  localDocs: LocalDocReference[];
  repos: RepoReference[];
}

// Auto-generated arrays from canonical-references.toml. Do not edit.

export const ECOSYSTEM_REFERENCES: readonly EcosystemReference[] = [
{
    "id": "bun",
    "name": "Bun",
    "kind": "runtime",
    "homepage": "https://bun.sh",
    "docs": "https://bun.com/docs",
    "package": "bun",
    "usage": "Runtime, test runner, package manager, and native I/O for kimi-toolchain",
    "minVersion": "1.4.0",
    "repoId": "bun-upstream",
  },
{
    "id": "effect",
    "name": "Effect",
    "kind": "library",
    "homepage": "https://effect.website",
    "docs": "https://effect.website/docs",
    "package": "effect",
    "usage": "Typed errors, CLI/runtime adapters, and Herdr pane orchestration in src/lib/effect/",
    "minVersion": "3.21.3",
    "repoId": "effect-upstream",
  },
{
    "id": "kimi-code",
    "name": "Kimi Code",
    "kind": "product",
    "homepage": "https://moonshotai.github.io/kimi-code/",
    "docs": "https://moonshotai.github.io/kimi-code/en/reference/kimi-command.html",
    "usage": "Official agent CLI (\`kimi\`), config.toml, sessions, MCP — distinct from \`kimi-doctor\`",
    "install": "https://code.kimi.com/kimi-code/install.sh",
    "repoId": "kimi-code-upstream",
  },
{
    "id": "herdr",
    "name": "Herdr",
    "kind": "product",
    "homepage": "https://herdr.dev",
    "docs": "https://herdr.dev/docs/",
    "usage": "Terminal-native multiplexer; socket API for herdr-pane, herdr-latm, herdr-orchestrator",
    "install": "https://herdr.dev/install.sh",
    "noRepo": true,
  },
{
    "id": "cloudflare",
    "name": "Cloudflare Platform",
    "kind": "platform",
    "homepage": "https://developers.cloudflare.com/",
    "docs": "https://developers.cloudflare.com/workers/",
    "usage": "Workers, Access, MCP; use kimi-cloudflare-access for API tokens (separate from Wrangler OAuth)",
    "noRepo": true,
  },
{
    "id": "cloudflare-mcp",
    "name": "Cloudflare MCP",
    "kind": "mcp",
    "homepage": "https://mcp.cloudflare.com/mcp",
    "docs": "https://developers.cloudflare.com/agents/model-context-protocol/",
    "usage": "Default user MCP \`cloudflare-api\`; optional docs/bindings/builds/observability endpoints",
    "noRepo": true,
  },
{
    "id": "dx",
    "name": "DX",
    "kind": "product",
    "homepage": "https://github.com/brendadeeznuts1111/dx-config",
    "docs": "~/.config/dx/AGENTS.md",
    "usage": "Global Bun dev platform — \`dx config\`, \`dx mcp-status\`, \`dx.config.toml\` herdr/finishWork",
    "noRepo": true,
  },
{
    "id": "js-yaml",
    "name": "js-yaml",
    "kind": "library",
    "homepage": "https://github.com/nodeca/js-yaml",
    "docs": "https://github.com/nodeca/js-yaml#readme",
    "package": "js-yaml",
    "usage": "YAML parsing for error-taxonomy.yml and config files; minimal runtime dependency alongside effect",
    "minVersion": "4.1.0",
    "noRepo": true,
  },
{
    "id": "oxc",
    "name": "Oxc (oxfmt / oxlint)",
    "kind": "library",
    "homepage": "https://oxc.rs",
    "docs": "https://oxc.rs/docs/guide/usage/formatter.html",
    "package": "oxfmt",
    "usage": "Format (oxfmt) and lint (oxlint) gates — no ESLint/Prettier in this repo",
    "repoId": "oxc-upstream",
  },
];

export const LOCAL_DOC_REFERENCES: readonly LocalDocReference[] = [
{
    "id": "agents",
    "repoPath": "AGENTS.md",
    "runtimePath": "~/.kimi-code/AGENTS.md",
    "purpose": "Toolchain agent guide",
  },
{
    "id": "code-references",
    "repoPath": "CODE_REFERENCES.md",
    "runtimePath": "~/.kimi-code/CODE_REFERENCES.md",
    "purpose": "Local coding exemplars; doc-links lint and @see ladder",
    "cursorCanvas": "docs/canvases/doc-links-and-see-ladder.canvas.tsx",
    "canvasId": "doc-links-and-see-ladder",
    "canvasPage": "Doc links",
    "canvasVersion": "0.1.0",
    "canvasLayer": "Doc URL lint",
    "canvasOpenWhen": "@see ladder · docs/references index",
    "canvasReadOrder": 4,
    "canvasInfluences": ["card-inspect-table","card-file-split","card-transpiler-scan"],
  },
{
    "id": "unified",
    "repoPath": "UNIFIED.md",
    "runtimePath": "~/.kimi-code/UNIFIED.md",
    "purpose": "Kimi Code vs kimi-toolchain matrix",
    "cursorCanvas": "docs/canvases/kimi-toolchain.canvas.tsx",
    "canvasId": "kimi-toolchain",
    "canvasPage": "Hub",
    "canvasVersion": "0.1.0",
    "canvasLayer": "Project hub",
    "canvasOpenWhen": "Architecture, tools, gates — start here",
    "canvasReadOrder": 1,
    "canvasInfluences": ["card-symbols","card-gates","card-bundle","card-compile","card-build","card-scaffold"],
  },
{
    "id": "deep-quality",
    "repoPath": "DEEP-QUALITY.md",
    "runtimePath": "~/.kimi-code/DEEP-QUALITY.md",
    "purpose": "Effect-discipline floor and gate JSON shapes; kimi-heal --fix bare-promise repair and KIMI_MODULES=doctor scaffold",
    "cursorCanvas": "docs/canvases/kimi-heal-doctor-scaffold.canvas.tsx",
    "canvasId": "kimi-heal-doctor-scaffold",
    "canvasPage": "Effect heal + doctor",
    "canvasVersion": "0.1.0",
    "canvasLayer": "kimi-heal --fix · doctor scaffold",
    "canvasOpenWhen": "Effect repair · KIMI_MODULES=doctor · perf gates",
    "canvasReadOrder": 9,
    "canvasInfluences": ["card-gates","card-effect-image","card-transpiler-scan","card-kimi-doctor","card-perf-harness"],
  },
{
    "id": "templates",
    "repoPath": "TEMPLATES.md",
    "runtimePath": "~/.kimi-code/TEMPLATES.md",
    "purpose": "Scaffold templates — profiles, snippets, bun create flow, kimi-fix usage",
    "cursorCanvas": "docs/canvases/kimi-fix.canvas.tsx",
    "canvasId": "kimi-fix",
    "canvasPage": "Scaffold",
    "canvasVersion": "0.1.0",
    "canvasLayer": "kimi-fix · bun create",
    "canvasOpenWhen": "Profiles · templates · scaffold doctor",
    "canvasReadOrder": 5,
    "canvasInfluences": ["card-scaffold","card-kimi-doctor","card-gates","card-kimi-publish"],
  },
{
    "id": "dashboard-thumbnails",
    "repoPath": "docs/references/dashboard-thumbnails.md",
    "runtimePath": "~/.kimi-code/docs/references/dashboard-thumbnails.md",
    "purpose": "Herdr dashboard thumbnail pipeline; meta.webview; WebView dataStore vs in-memory cache",
    "cursorCanvas": "docs/canvases/herdr-dashboard-thumbnails.canvas.tsx",
    "canvasId": "herdr-dashboard-thumbnails",
    "canvasPage": "Orchestrator HTTP",
    "canvasVersion": "0.1.0",
    "canvasLayer": "Orchestrator HTTP",
    "canvasOpenWhen": "PNG → Bun.Image → /api/thumbnail",
    "canvasReadOrder": 6,
    "canvasInfluences": ["card-image","card-effect-image","card-bun-runtime","card-perf-harness"],
  },
{
    "id": "kimi-doctor",
    "repoPath": "docs/references/kimi-doctor.md",
    "runtimePath": "~/.kimi-code/docs/references/kimi-doctor.md",
    "purpose": "Dashboard automation gate (kimi-doctor --automation): CLI, JSON schema, exit codes, and failure modes",
    "cursorCanvas": "docs/canvases/herdr-dashboard-automation.canvas.tsx",
    "canvasId": "herdr-dashboard-automation",
    "canvasPage": "Finish-work shell",
    "canvasVersion": "1.0.0",
    "canvasLayer": "Finish-work shell",
    "canvasOpenWhen": "kimi-doctor --automation · gate JSON",
    "canvasReadOrder": 7,
    "canvasInfluences": ["card-kimi-doctor","card-gates","card-perf-harness","card-perf-registry"],
  },
{
    "id": "serve-probe",
    "repoPath": "docs/references/serve-probe.md",
    "runtimePath": "~/.kimi-code/docs/references/serve-probe.md",
    "purpose": "kimi-doctor --serve-probe HTTP routes, [doctor.probe] dx.config.toml, artifact list API, and Herdr tab wiring",
  },
{
    "id": "herdr-socket-saturation-protocol",
    "repoPath": "docs/references/herdr-socket-saturation-protocol.md",
    "runtimePath": "~/.kimi-code/docs/references/herdr-socket-saturation-protocol.md",
    "purpose": "Herdr EAGAIN (os error 35) taxonomy, fix-socket --dry-run/--live contract, respawn protection, and Mac mini runbook",
  },
{
    "id": "namespace",
    "repoPath": "docs/references/namespace.md",
    "runtimePath": "~/.kimi-code/docs/references/namespace.md",
    "purpose": "Toolchain vs Herdr plugin namespace; doctor trinity (kimi-doctor, herdr-doctor bin/plugin, kimi doctor); global ecosystem; finish-work vs prefix keybindings",
    "cursorCanvas": "docs/canvases/namespace-boundaries.canvas.tsx",
    "canvasId": "namespace-boundaries",
    "canvasPage": "Meta / routing",
    "canvasVersion": "0.1.0",
    "canvasLayer": "Meta / routing",
    "canvasOpenWhen": "Doctor trinity · finish-work vs prefix+*",
    "canvasReadOrder": 2,
    "canvasInfluences": ["card-gates","card-symbols","card-kimi-doctor"],
  },
{
    "id": "configuration-layers",
    "repoPath": "docs/references/configuration-layers.md",
    "runtimePath": "~/.kimi-code/docs/references/configuration-layers.md",
    "purpose": "Four-layer model: discovery (canonical-references), define registry (constants-manifest), cross-repo parity (constants-parity.toml), app scaffold (templates/scaffold/bunfig.toml)",
    "cursorCanvas": "docs/canvases/configuration-layers.canvas.tsx",
    "canvasId": "configuration-layers",
    "canvasPage": "Config SSOT",
    "canvasVersion": "1.0.0",
    "canvasLayer": "Config SSOT",
    "canvasOpenWhen": "Discovery · define · parity · scaffold layers",
    "canvasReadOrder": 3,
    "canvasInfluences": ["card-threshold-overrides","card-metrics-schema","card-global-store"],
  },
{
    "id": "canonical-references-system",
    "repoPath": "docs/references/canonical-references-system.md",
    "runtimePath": "~/.kimi-code/docs/references/canonical-references-system.md",
    "purpose": "Manifest schema, generation pipeline, freshness/drift mechanics, lint layers, and consumer graph for canonical-references.json",
    "canvasReadOrder": 3,
  },
{
    "id": "shell-spawn-choice",
    "repoPath": "docs/references/shell-spawn-choice.md",
    "runtimePath": "~/.kimi-code/docs/references/shell-spawn-choice.md",
    "purpose": "invokeTool vs Bun.spawn vs governedSpawn decision matrix",
  },
{
    "id": "v53-architecture",
    "repoPath": "docs/references/v53-architecture.md",
    "runtimePath": "~/.kimi-code/docs/references/v53-architecture.md",
    "purpose": "Dashboard card registry and canvas↔card influence map",
    "cursorCanvas": "docs/canvases/dashboard-card-registry.canvas.tsx",
    "canvasId": "dashboard-card-registry",
    "canvasPage": "Dashboard card registry",
    "canvasVersion": "0.1.0",
    "canvasLayer": "Card registry",
    "canvasOpenWhen": "Canvas↔card wiring · influence coverage",
    "canvasReadOrder": 10,
    "canvasInfluences": ["card-gates","card-kimi-doctor","card-scaffold","card-perf-harness","card-symbols","card-perf-registry"],
  },
{
    "id": "bun-runtime-scaffold",
    "repoPath": "docs/references/bun-runtime-scaffold.md",
    "runtimePath": "~/.kimi-code/docs/references/bun-runtime-scaffold.md",
    "purpose": "Bun install config (bunfig.toml merge order, defaults, env vars, backend, cache/lazy install)",
  },
{
    "id": "bunfig-config",
    "repoPath": "docs/references/bunfig-config.md",
    "runtimePath": "~/.kimi-code/docs/references/bunfig-config.md",
    "purpose": "Bunfig.toml runtime, test, serve, and bun run configuration reference",
  },
{
    "id": "bun-install-config",
    "repoPath": "docs/references/bun-install-config.md",
    "runtimePath": "~/.kimi-code/docs/references/bun-install-config.md",
    "purpose": "Bun install configuration reference: [install], scopes, cache, and platform selectors",
  },
{
    "id": "bun-types",
    "repoPath": "docs/references/bun-types.md",
    "runtimePath": "~/.kimi-code/docs/references/bun-types.md",
    "purpose": "Bun TypeScript types reference: bun-types package, @types/bun shim, and local checkout pinning",
  },
{
    "id": "bun-test-api",
    "repoPath": "docs/references/bun-test-api.md",
    "runtimePath": "~/.kimi-code/docs/references/bun-test-api.md",
    "purpose": "Bun test runner API reference: bun:test, matchers, mocks, snapshots, and lifecycle hooks",
  },
{
    "id": "testing-execution",
    "repoPath": "docs/references/testing-execution.md",
    "runtimePath": "~/.kimi-code/docs/references/testing-execution.md",
    "purpose": "Four-script test execution model — selection (fast/changed/parallel/shard), distribution (file not describe), --changed safety net",
  },
{
    "id": "bun-shell-companions",
    "repoPath": "docs/references/bun-shell-companions.md",
    "runtimePath": "~/.kimi-code/docs/references/bun-shell-companions.md",
    "purpose": "Bun $ template vs subprocess and inspect companion patterns",
  },
{
    "id": "bun-file-streaming",
    "repoPath": "docs/references/bun-file-streaming.md",
    "runtimePath": "~/.kimi-code/docs/references/bun-file-streaming.md",
    "purpose": "Bun.file/Bun.write streaming decisions for configs, JSONL ledgers, large artifacts, transformed streams, and HTTP responses",
  },
{
    "id": "template-matrix",
    "repoPath": "docs/references/template-matrix.md",
    "runtimePath": "~/.kimi-code/docs/references/template-matrix.md",
    "purpose": "Template families matrix: scaffold breakdown (22 files), bridge pattern collision resolution, runtime sync paths, profile differentiation",
  },
{
    "id": "herdr-plugin-architecture",
    "repoPath": "docs/references/herdr-plugin-architecture.md",
    "runtimePath": "~/.kimi-code/docs/references/herdr-plugin-architecture.md",
    "purpose": "Herdr unified plugin plan v0.5.0 — prefix+* actions, STATE_DIR topology; orthogonal to [finishWork].gates",
    "cursorCanvas": "docs/canvases/herdr-unified-plugin-architecture.canvas.tsx",
    "canvasId": "herdr-unified-plugin-architecture",
    "canvasPage": "Herdr plugins",
    "canvasVersion": "0.5.0",
    "canvasLayer": "Herdr plugins v0.5.0",
    "canvasOpenWhen": "prefix+* · orthogonal to finish-work gates",
    "canvasReadOrder": 8,
    "canvasInfluences": ["card-ipc-matrix","card-vm-context","card-ipc"],
  },
{
    "id": "artifact-lineage",
    "repoPath": "examples/artifact-dependency-graphs.md",
    "runtimePath": "~/.kimi-code/examples/artifact-dependency-graphs.md",
    "purpose": "Run manifests, artifact lineage (dependsOn vs gate-graph), and session-scoped identity queries",
    "cursorCanvas": "docs/canvases/artifact-lineage.canvas.tsx",
    "canvasId": "artifact-lineage",
    "canvasPage": "Artifacts & Runs",
    "canvasVersion": "1.0.0",
    "canvasLayer": "Artifact nervous system",
    "canvasOpenWhen": "Run manifests · /api/artifacts · /api/runs · lineage URLPatterns",
    "canvasReadOrder": 11,
    "canvasInfluences": ["card-artifacts","card-gates","card-metrics-schema","card-kimi-doctor","card-trace-verify","card-bunfig-policy","card-url","card-bun-runtime","card-effect-image"],
  },
{
    "id": "gate-health",
    "repoPath": "docs/references/serve-probe.md",
    "runtimePath": "~/.kimi-code/docs/references/serve-probe.md",
    "purpose": "Live Herdr dashboard gate-health overlay — effect-gates probe, browser poll, server watch",
    "cursorCanvas": "docs/canvases/gate-health.canvas.tsx",
    "canvasId": "gate-health",
    "canvasPage": "Gate Health",
    "canvasVersion": "1.0.0",
    "canvasLayer": "Effect gates probe",
    "canvasOpenWhen": "GET /api/doctor/gates · #gate-health overlay · 30s poll",
    "canvasReadOrder": 12,
    "canvasInfluences": ["card-gates","card-kimi-doctor"],
  },
{
    "id": "benchmark",
    "repoPath": "docs/references/kimi-doctor.md",
    "runtimePath": "~/.kimi-code/docs/references/kimi-doctor.md",
    "purpose": "BenchmarkApiEnvelope SSOT — runEffectBenchmarkCardLoop shared by CLI, dashboard, and serve-probe",
    "cursorCanvas": "docs/canvases/benchmark.canvas.tsx",
    "canvasId": "benchmark",
    "canvasPage": "Effect Benchmark",
    "canvasVersion": "1.0.0",
    "canvasLayer": "Perf gates probe",
    "canvasOpenWhen": "GET /api/effect-benchmark · serve-probe · 30s poll",
    "canvasReadOrder": 13,
    "canvasInfluences": ["card-effect-benchmark","card-perf-harness","card-kimi-doctor"],
  },
{
    "id": "agent-api",
    "repoPath": "docs/agent-api.md",
    "runtimePath": "~/.kimi-code/docs/agent-api.md",
    "purpose": "Effect-native agent API surface: KimiCapabilities, KimiTrace, KimiContract, DecisionLogger services — use instead of CLI shelling out inside Effect programs",
  },
{
    "id": "finish-work-close-loop",
    "repoPath": "docs/finish-work-close-loop.md",
    "runtimePath": "~/.kimi-code/docs/finish-work-close-loop.md",
    "purpose": "Finish-work close-loop architecture: gates → git → dirty check → reviewer escalation → orchestrator signal; dx.config.toml [finishWork] and [herdr.orchestrator] wiring",
  },
{
    "id": "handoff-rules",
    "repoPath": "docs/handoff-rules.md",
    "runtimePath": "~/.kimi-code/docs/handoff-rules.md",
    "purpose": "Herdr orchestrator handoff rules: TOML format, condition syntax (done/blocked/idle/probe:*), report-native when-clauses, and cross-workspace agent routing",
  },
{
    "id": "naming",
    "repoPath": "docs/naming.md",
    "runtimePath": "~/.kimi-code/docs/naming.md",
    "purpose": "CLI naming notes and deprecation register: --session-report → --effect-floor; kimi-doctor vs herdr-doctor vs kimi doctor disambiguation shortcuts",
  },
{
    "id": "canonical-references",
    "repoPath": "canonical-references.json",
    "runtimePath": "~/.kimi-code/canonical-references.json",
    "purpose": "Cached canonical ecosystem links (this manifest)",
  },
];

export const REPO_REFERENCES: readonly RepoReference[] = [
{
    "id": "bun-upstream",
    "name": "Bun (oven-sh)",
    "url": "https://github.com/oven-sh/bun",
    "description": "Bun runtime upstream — public benchmarks in /bench; profiling and timing at bun.com/docs/project/benchmarking",
    "defaultBranch": "main",
    "ciStatusUrl": "https://github.com/oven-sh/bun/actions",
    "provides": ["bun"],
    "role": "upstream",
    "frameworks": ["bun"],
  },
{
    "id": "kimi-toolchain",
    "name": "kimi-toolchain",
    "url": "https://github.com/brendadeeznuts1111/kimi-toolchain",
    "description": "Bun-native developer tooling: governance, diagnostics, security, and scaffolding",
    "defaultBranch": "main",
    "ciStatusUrl": "https://github.com/brendadeeznuts1111/kimi-toolchain/actions",
    "clonePath": "~/kimi-toolchain",
    "role": "tool",
    "language": "typescript",
    "frameworks": ["bun","effect","oxc"],
    "expectedPackageName": "kimi-toolchain",
  },
{
    "id": "kimi-code-upstream",
    "name": "Kimi Code (Moonshot)",
    "url": "https://github.com/MoonshotAI/kimi-code",
    "description": "Official Kimi Code agent CLI, config.toml, sessions, and MCP integration",
    "defaultBranch": "main",
    "ciStatusUrl": "https://github.com/MoonshotAI/kimi-code/actions",
    "provides": ["kimi-code"],
    "role": "upstream",
    "language": "typescript",
    "frameworks": ["node"],
  },
{
    "id": "effect-upstream",
    "name": "Effect",
    "url": "https://github.com/Effect-TS/effect",
    "description": "Typed functional effect system for TypeScript services and CLI pipelines",
    "defaultBranch": "main",
    "ciStatusUrl": "https://github.com/Effect-TS/effect/actions",
    "provides": ["effect"],
    "role": "upstream",
    "language": "typescript",
    "frameworks": ["effect","node"],
  },
{
    "id": "oxc-upstream",
    "name": "Oxc",
    "url": "https://github.com/oxc-project/oxc",
    "description": "Rust-based JavaScript toolchain (oxfmt, oxlint) used in format and lint gates",
    "defaultBranch": "main",
    "ciStatusUrl": "https://github.com/oxc-project/oxc/actions",
    "provides": ["oxc"],
    "role": "upstream",
    "language": "rust",
    "frameworks": ["oxc"],
  },
];
"
`;

exports[`canonical-references generated JSON manifest matches snapshot 1`] = `
"{
  "schemaVersion": 1,
  "generatedAt": "2026-06-26T17:31:58.906Z",
  "toolchainVersion": "1.0.0",
  "ecosystem": [
    {
      "id": "bun",
      "name": "Bun",
      "kind": "runtime",
      "homepage": "https://bun.sh",
      "docs": "https://bun.com/docs",
      "package": "bun",
      "usage": "Runtime, test runner, package manager, and native I/O for kimi-toolchain",
      "minVersion": "1.4.0",
      "repoId": "bun-upstream"
    },
    {
      "id": "effect",
      "name": "Effect",
      "kind": "library",
      "homepage": "https://effect.website",
      "docs": "https://effect.website/docs",
      "package": "effect",
      "usage": "Typed errors, CLI/runtime adapters, and Herdr pane orchestration in src/lib/effect/",
      "minVersion": "3.21.3",
      "repoId": "effect-upstream"
    },
    {
      "id": "kimi-code",
      "name": "Kimi Code",
      "kind": "product",
      "homepage": "https://moonshotai.github.io/kimi-code/",
      "docs": "https://moonshotai.github.io/kimi-code/en/reference/kimi-command.html",
      "usage": "Official agent CLI (\`kimi\`), config.toml, sessions, MCP — distinct from \`kimi-doctor\`",
      "install": "https://code.kimi.com/kimi-code/install.sh",
      "repoId": "kimi-code-upstream"
    },
    {
      "id": "herdr",
      "name": "Herdr",
      "kind": "product",
      "homepage": "https://herdr.dev",
      "docs": "https://herdr.dev/docs/",
      "usage": "Terminal-native multiplexer; socket API for herdr-pane, herdr-latm, herdr-orchestrator",
      "install": "https://herdr.dev/install.sh",
      "noRepo": true
    },
    {
      "id": "cloudflare",
      "name": "Cloudflare Platform",
      "kind": "platform",
      "homepage": "https://developers.cloudflare.com/",
      "docs": "https://developers.cloudflare.com/workers/",
      "usage": "Workers, Access, MCP; use kimi-cloudflare-access for API tokens (separate from Wrangler OAuth)",
      "noRepo": true
    },
    {
      "id": "cloudflare-mcp",
      "name": "Cloudflare MCP",
      "kind": "mcp",
      "homepage": "https://mcp.cloudflare.com/mcp",
      "docs": "https://developers.cloudflare.com/agents/model-context-protocol/",
      "usage": "Default user MCP \`cloudflare-api\`; optional docs/bindings/builds/observability endpoints",
      "noRepo": true
    },
    {
      "id": "dx",
      "name": "DX",
      "kind": "product",
      "homepage": "https://github.com/brendadeeznuts1111/dx-config",
      "docs": "~/.config/dx/AGENTS.md",
      "usage": "Global Bun dev platform — \`dx config\`, \`dx mcp-status\`, \`dx.config.toml\` herdr/finishWork",
      "noRepo": true
    },
    {
      "id": "js-yaml",
      "name": "js-yaml",
      "kind": "library",
      "homepage": "https://github.com/nodeca/js-yaml",
      "docs": "https://github.com/nodeca/js-yaml#readme",
      "package": "js-yaml",
      "usage": "YAML parsing for error-taxonomy.yml and config files; minimal runtime dependency alongside effect",
      "minVersion": "4.1.0",
      "noRepo": true
    },
    {
      "id": "oxc",
      "name": "Oxc (oxfmt / oxlint)",
      "kind": "library",
      "homepage": "https://oxc.rs",
      "docs": "https://oxc.rs/docs/guide/usage/formatter.html",
      "package": "oxfmt",
      "usage": "Format (oxfmt) and lint (oxlint) gates — no ESLint/Prettier in this repo",
      "repoId": "oxc-upstream"
    }
  ],
  "localDocs": [
    {
      "id": "agents",
      "repoPath": "AGENTS.md",
      "runtimePath": "~/.kimi-code/AGENTS.md",
      "purpose": "Toolchain agent guide"
    },
    {
      "id": "code-references",
      "repoPath": "CODE_REFERENCES.md",
      "runtimePath": "~/.kimi-code/CODE_REFERENCES.md",
      "purpose": "Local coding exemplars; doc-links lint and @see ladder",
      "cursorCanvas": "docs/canvases/doc-links-and-see-ladder.canvas.tsx",
      "canvasId": "doc-links-and-see-ladder",
      "canvasPage": "Doc links",
      "canvasVersion": "0.1.0",
      "canvasLayer": "Doc URL lint",
      "canvasOpenWhen": "@see ladder · docs/references index",
      "canvasReadOrder": 4,
      "canvasInfluences": [
        "card-inspect-table",
        "card-file-split",
        "card-transpiler-scan"
      ]
    },
    {
      "id": "unified",
      "repoPath": "UNIFIED.md",
      "runtimePath": "~/.kimi-code/UNIFIED.md",
      "purpose": "Kimi Code vs kimi-toolchain matrix",
      "cursorCanvas": "docs/canvases/kimi-toolchain.canvas.tsx",
      "canvasId": "kimi-toolchain",
      "canvasPage": "Hub",
      "canvasVersion": "0.1.0",
      "canvasLayer": "Project hub",
      "canvasOpenWhen": "Architecture, tools, gates — start here",
      "canvasReadOrder": 1,
      "canvasInfluences": [
        "card-symbols",
        "card-gates",
        "card-bundle",
        "card-compile",
        "card-build",
        "card-scaffold"
      ]
    },
    {
      "id": "deep-quality",
      "repoPath": "DEEP-QUALITY.md",
      "runtimePath": "~/.kimi-code/DEEP-QUALITY.md",
      "purpose": "Effect-discipline floor and gate JSON shapes; kimi-heal --fix bare-promise repair and KIMI_MODULES=doctor scaffold",
      "cursorCanvas": "docs/canvases/kimi-heal-doctor-scaffold.canvas.tsx",
      "canvasId": "kimi-heal-doctor-scaffold",
      "canvasPage": "Effect heal + doctor",
      "canvasVersion": "0.1.0",
      "canvasLayer": "kimi-heal --fix · doctor scaffold",
      "canvasOpenWhen": "Effect repair · KIMI_MODULES=doctor · perf gates",
      "canvasReadOrder": 9,
      "canvasInfluences": [
        "card-gates",
        "card-effect-image",
        "card-transpiler-scan",
        "card-kimi-doctor",
        "card-perf-harness"
      ]
    },
    {
      "id": "templates",
      "repoPath": "TEMPLATES.md",
      "runtimePath": "~/.kimi-code/TEMPLATES.md",
      "purpose": "Scaffold templates — profiles, snippets, bun create flow, kimi-fix usage",
      "cursorCanvas": "docs/canvases/kimi-fix.canvas.tsx",
      "canvasId": "kimi-fix",
      "canvasPage": "Scaffold",
      "canvasVersion": "0.1.0",
      "canvasLayer": "kimi-fix · bun create",
      "canvasOpenWhen": "Profiles · templates · scaffold doctor",
      "canvasReadOrder": 5,
      "canvasInfluences": [
        "card-scaffold",
        "card-kimi-doctor",
        "card-gates",
        "card-kimi-publish"
      ]
    },
    {
      "id": "dashboard-thumbnails",
      "repoPath": "docs/references/dashboard-thumbnails.md",
      "runtimePath": "~/.kimi-code/docs/references/dashboard-thumbnails.md",
      "purpose": "Herdr dashboard thumbnail pipeline; meta.webview; WebView dataStore vs in-memory cache",
      "cursorCanvas": "docs/canvases/herdr-dashboard-thumbnails.canvas.tsx",
      "canvasId": "herdr-dashboard-thumbnails",
      "canvasPage": "Orchestrator HTTP",
      "canvasVersion": "0.1.0",
      "canvasLayer": "Orchestrator HTTP",
      "canvasOpenWhen": "PNG → Bun.Image → /api/thumbnail",
      "canvasReadOrder": 6,
      "canvasInfluences": [
        "card-image",
        "card-effect-image",
        "card-bun-runtime",
        "card-perf-harness"
      ]
    },
    {
      "id": "kimi-doctor",
      "repoPath": "docs/references/kimi-doctor.md",
      "runtimePath": "~/.kimi-code/docs/references/kimi-doctor.md",
      "purpose": "Dashboard automation gate (kimi-doctor --automation): CLI, JSON schema, exit codes, and failure modes",
      "cursorCanvas": "docs/canvases/herdr-dashboard-automation.canvas.tsx",
      "canvasId": "herdr-dashboard-automation",
      "canvasPage": "Finish-work shell",
      "canvasVersion": "1.0.0",
      "canvasLayer": "Finish-work shell",
      "canvasOpenWhen": "kimi-doctor --automation · gate JSON",
      "canvasReadOrder": 7,
      "canvasInfluences": [
        "card-kimi-doctor",
        "card-gates",
        "card-perf-harness",
        "card-perf-registry"
      ]
    },
    {
      "id": "serve-probe",
      "repoPath": "docs/references/serve-probe.md",
      "runtimePath": "~/.kimi-code/docs/references/serve-probe.md",
      "purpose": "kimi-doctor --serve-probe HTTP routes, [doctor.probe] dx.config.toml, artifact list API, and Herdr tab wiring"
    },
    {
      "id": "herdr-socket-saturation-protocol",
      "repoPath": "docs/references/herdr-socket-saturation-protocol.md",
      "runtimePath": "~/.kimi-code/docs/references/herdr-socket-saturation-protocol.md",
      "purpose": "Herdr EAGAIN (os error 35) taxonomy, fix-socket --dry-run/--live contract, respawn protection, and Mac mini runbook"
    },
    {
      "id": "namespace",
      "repoPath": "docs/references/namespace.md",
      "runtimePath": "~/.kimi-code/docs/references/namespace.md",
      "purpose": "Toolchain vs Herdr plugin namespace; doctor trinity (kimi-doctor, herdr-doctor bin/plugin, kimi doctor); global ecosystem; finish-work vs prefix keybindings",
      "cursorCanvas": "docs/canvases/namespace-boundaries.canvas.tsx",
      "canvasId": "namespace-boundaries",
      "canvasPage": "Meta / routing",
      "canvasVersion": "0.1.0",
      "canvasLayer": "Meta / routing",
      "canvasOpenWhen": "Doctor trinity · finish-work vs prefix+*",
      "canvasReadOrder": 2,
      "canvasInfluences": [
        "card-gates",
        "card-symbols",
        "card-kimi-doctor"
      ]
    },
    {
      "id": "configuration-layers",
      "repoPath": "docs/references/configuration-layers.md",
      "runtimePath": "~/.kimi-code/docs/references/configuration-layers.md",
      "purpose": "Four-layer model: discovery (canonical-references), define registry (constants-manifest), cross-repo parity (constants-parity.toml), app scaffold (templates/scaffold/bunfig.toml)",
      "cursorCanvas": "docs/canvases/configuration-layers.canvas.tsx",
      "canvasId": "configuration-layers",
      "canvasPage": "Config SSOT",
      "canvasVersion": "1.0.0",
      "canvasLayer": "Config SSOT",
      "canvasOpenWhen": "Discovery · define · parity · scaffold layers",
      "canvasReadOrder": 3,
      "canvasInfluences": [
        "card-threshold-overrides",
        "card-metrics-schema",
        "card-global-store"
      ]
    },
    {
      "id": "canonical-references-system",
      "repoPath": "docs/references/canonical-references-system.md",
      "runtimePath": "~/.kimi-code/docs/references/canonical-references-system.md",
      "purpose": "Manifest schema, generation pipeline, freshness/drift mechanics, lint layers, and consumer graph for canonical-references.json",
      "canvasReadOrder": 3
    },
    {
      "id": "shell-spawn-choice",
      "repoPath": "docs/references/shell-spawn-choice.md",
      "runtimePath": "~/.kimi-code/docs/references/shell-spawn-choice.md",
      "purpose": "invokeTool vs Bun.spawn vs governedSpawn decision matrix"
    },
    {
      "id": "v53-architecture",
      "repoPath": "docs/references/v53-architecture.md",
      "runtimePath": "~/.kimi-code/docs/references/v53-architecture.md",
      "purpose": "Dashboard card registry and canvas↔card influence map",
      "cursorCanvas": "docs/canvases/dashboard-card-registry.canvas.tsx",
      "canvasId": "dashboard-card-registry",
      "canvasPage": "Dashboard card registry",
      "canvasVersion": "0.1.0",
      "canvasLayer": "Card registry",
      "canvasOpenWhen": "Canvas↔card wiring · influence coverage",
      "canvasReadOrder": 10,
      "canvasInfluences": [
        "card-gates",
        "card-kimi-doctor",
        "card-scaffold",
        "card-perf-harness",
        "card-symbols",
        "card-perf-registry"
      ]
    },
    {
      "id": "bun-runtime-scaffold",
      "repoPath": "docs/references/bun-runtime-scaffold.md",
      "runtimePath": "~/.kimi-code/docs/references/bun-runtime-scaffold.md",
      "purpose": "Bun install config (bunfig.toml merge order, defaults, env vars, backend, cache/lazy install)"
    },
    {
      "id": "bunfig-config",
      "repoPath": "docs/references/bunfig-config.md",
      "runtimePath": "~/.kimi-code/docs/references/bunfig-config.md",
      "purpose": "Bunfig.toml runtime, test, serve, and bun run configuration reference"
    },
    {
      "id": "bun-install-config",
      "repoPath": "docs/references/bun-install-config.md",
      "runtimePath": "~/.kimi-code/docs/references/bun-install-config.md",
      "purpose": "Bun install configuration reference: [install], scopes, cache, and platform selectors"
    },
    {
      "id": "bun-types",
      "repoPath": "docs/references/bun-types.md",
      "runtimePath": "~/.kimi-code/docs/references/bun-types.md",
      "purpose": "Bun TypeScript types reference: bun-types package, @types/bun shim, and local checkout pinning"
    },
    {
      "id": "bun-test-api",
      "repoPath": "docs/references/bun-test-api.md",
      "runtimePath": "~/.kimi-code/docs/references/bun-test-api.md",
      "purpose": "Bun test runner API reference: bun:test, matchers, mocks, snapshots, and lifecycle hooks"
    },
    {
      "id": "testing-execution",
      "repoPath": "docs/references/testing-execution.md",
      "runtimePath": "~/.kimi-code/docs/references/testing-execution.md",
      "purpose": "Four-script test execution model — selection (fast/changed/parallel/shard), distribution (file not describe), --changed safety net"
    },
    {
      "id": "bun-shell-companions",
      "repoPath": "docs/references/bun-shell-companions.md",
      "runtimePath": "~/.kimi-code/docs/references/bun-shell-companions.md",
      "purpose": "Bun $ template vs subprocess and inspect companion patterns"
    },
    {
      "id": "bun-file-streaming",
      "repoPath": "docs/references/bun-file-streaming.md",
      "runtimePath": "~/.kimi-code/docs/references/bun-file-streaming.md",
      "purpose": "Bun.file/Bun.write streaming decisions for configs, JSONL ledgers, large artifacts, transformed streams, and HTTP responses"
    },
    {
      "id": "template-matrix",
      "repoPath": "docs/references/template-matrix.md",
      "runtimePath": "~/.kimi-code/docs/references/template-matrix.md",
      "purpose": "Template families matrix: scaffold breakdown (22 files), bridge pattern collision resolution, runtime sync paths, profile differentiation"
    },
    {
      "id": "herdr-plugin-architecture",
      "repoPath": "docs/references/herdr-plugin-architecture.md",
      "runtimePath": "~/.kimi-code/docs/references/herdr-plugin-architecture.md",
      "purpose": "Herdr unified plugin plan v0.5.0 — prefix+* actions, STATE_DIR topology; orthogonal to [finishWork].gates",
      "cursorCanvas": "docs/canvases/herdr-unified-plugin-architecture.canvas.tsx",
      "canvasId": "herdr-unified-plugin-architecture",
      "canvasPage": "Herdr plugins",
      "canvasVersion": "0.5.0",
      "canvasLayer": "Herdr plugins v0.5.0",
      "canvasOpenWhen": "prefix+* · orthogonal to finish-work gates",
      "canvasReadOrder": 8,
      "canvasInfluences": [
        "card-ipc-matrix",
        "card-vm-context",
        "card-ipc"
      ]
    },
    {
      "id": "artifact-lineage",
      "repoPath": "examples/artifact-dependency-graphs.md",
      "runtimePath": "~/.kimi-code/examples/artifact-dependency-graphs.md",
      "purpose": "Run manifests, artifact lineage (dependsOn vs gate-graph), and session-scoped identity queries",
      "cursorCanvas": "docs/canvases/artifact-lineage.canvas.tsx",
      "canvasId": "artifact-lineage",
      "canvasPage": "Artifacts & Runs",
      "canvasVersion": "1.0.0",
      "canvasLayer": "Artifact nervous system",
      "canvasOpenWhen": "Run manifests · /api/artifacts · /api/runs · lineage URLPatterns",
      "canvasReadOrder": 11,
      "canvasInfluences": [
        "card-artifacts",
        "card-gates",
        "card-metrics-schema",
        "card-kimi-doctor",
        "card-trace-verify",
        "card-bunfig-policy",
        "card-url",
        "card-bun-runtime",
        "card-effect-image"
      ]
    },
    {
      "id": "gate-health",
      "repoPath": "docs/references/serve-probe.md",
      "runtimePath": "~/.kimi-code/docs/references/serve-probe.md",
      "purpose": "Live Herdr dashboard gate-health overlay — effect-gates probe, browser poll, server watch",
      "cursorCanvas": "docs/canvases/gate-health.canvas.tsx",
      "canvasId": "gate-health",
      "canvasPage": "Gate Health",
      "canvasVersion": "1.0.0",
      "canvasLayer": "Effect gates probe",
      "canvasOpenWhen": "GET /api/doctor/gates · #gate-health overlay · 30s poll",
      "canvasReadOrder": 12,
      "canvasInfluences": [
        "card-gates",
        "card-kimi-doctor"
      ]
    },
    {
      "id": "benchmark",
      "repoPath": "docs/references/kimi-doctor.md",
      "runtimePath": "~/.kimi-code/docs/references/kimi-doctor.md",
      "purpose": "BenchmarkApiEnvelope SSOT — runEffectBenchmarkCardLoop shared by CLI, dashboard, and serve-probe",
      "cursorCanvas": "docs/canvases/benchmark.canvas.tsx",
      "canvasId": "benchmark",
      "canvasPage": "Effect Benchmark",
      "canvasVersion": "1.0.0",
      "canvasLayer": "Perf gates probe",
      "canvasOpenWhen": "GET /api/effect-benchmark · serve-probe · 30s poll",
      "canvasReadOrder": 13,
      "canvasInfluences": [
        "card-effect-benchmark",
        "card-perf-harness",
        "card-kimi-doctor"
      ]
    },
    {
      "id": "agent-api",
      "repoPath": "docs/agent-api.md",
      "runtimePath": "~/.kimi-code/docs/agent-api.md",
      "purpose": "Effect-native agent API surface: KimiCapabilities, KimiTrace, KimiContract, DecisionLogger services — use instead of CLI shelling out inside Effect programs"
    },
    {
      "id": "finish-work-close-loop",
      "repoPath": "docs/finish-work-close-loop.md",
      "runtimePath": "~/.kimi-code/docs/finish-work-close-loop.md",
      "purpose": "Finish-work close-loop architecture: gates → git → dirty check → reviewer escalation → orchestrator signal; dx.config.toml [finishWork] and [herdr.orchestrator] wiring"
    },
    {
      "id": "handoff-rules",
      "repoPath": "docs/handoff-rules.md",
      "runtimePath": "~/.kimi-code/docs/handoff-rules.md",
      "purpose": "Herdr orchestrator handoff rules: TOML format, condition syntax (done/blocked/idle/probe:*), report-native when-clauses, and cross-workspace agent routing"
    },
    {
      "id": "naming",
      "repoPath": "docs/naming.md",
      "runtimePath": "~/.kimi-code/docs/naming.md",
      "purpose": "CLI naming notes and deprecation register: --session-report → --effect-floor; kimi-doctor vs herdr-doctor vs kimi doctor disambiguation shortcuts"
    },
    {
      "id": "canonical-references",
      "repoPath": "canonical-references.json",
      "runtimePath": "~/.kimi-code/canonical-references.json",
      "purpose": "Cached canonical ecosystem links (this manifest)"
    }
  ],
  "repos": [
    {
      "id": "bun-upstream",
      "name": "Bun (oven-sh)",
      "url": "https://github.com/oven-sh/bun",
      "description": "Bun runtime upstream — public benchmarks in /bench; profiling and timing at bun.com/docs/project/benchmarking",
      "defaultBranch": "main",
      "ciStatusUrl": "https://github.com/oven-sh/bun/actions",
      "provides": [
        "bun"
      ],
      "role": "upstream",
      "frameworks": [
        "bun"
      ]
    },
    {
      "id": "kimi-toolchain",
      "name": "kimi-toolchain",
      "url": "https://github.com/brendadeeznuts1111/kimi-toolchain",
      "description": "Bun-native developer tooling: governance, diagnostics, security, and scaffolding",
      "defaultBranch": "main",
      "ciStatusUrl": "https://github.com/brendadeeznuts1111/kimi-toolchain/actions",
      "clonePath": "~/kimi-toolchain",
      "role": "tool",
      "language": "typescript",
      "frameworks": [
        "bun",
        "effect",
        "oxc"
      ],
      "expectedPackageName": "kimi-toolchain"
    },
    {
      "id": "kimi-code-upstream",
      "name": "Kimi Code (Moonshot)",
      "url": "https://github.com/MoonshotAI/kimi-code",
      "description": "Official Kimi Code agent CLI, config.toml, sessions, and MCP integration",
      "defaultBranch": "main",
      "ciStatusUrl": "https://github.com/MoonshotAI/kimi-code/actions",
      "provides": [
        "kimi-code"
      ],
      "role": "upstream",
      "language": "typescript",
      "frameworks": [
        "node"
      ]
    },
    {
      "id": "effect-upstream",
      "name": "Effect",
      "url": "https://github.com/Effect-TS/effect",
      "description": "Typed functional effect system for TypeScript services and CLI pipelines",
      "defaultBranch": "main",
      "ciStatusUrl": "https://github.com/Effect-TS/effect/actions",
      "provides": [
        "effect"
      ],
      "role": "upstream",
      "language": "typescript",
      "frameworks": [
        "effect",
        "node"
      ]
    },
    {
      "id": "oxc-upstream",
      "name": "Oxc",
      "url": "https://github.com/oxc-project/oxc",
      "description": "Rust-based JavaScript toolchain (oxfmt, oxlint) used in format and lint gates",
      "defaultBranch": "main",
      "ciStatusUrl": "https://github.com/oxc-project/oxc/actions",
      "provides": [
        "oxc"
      ],
      "role": "upstream",
      "language": "rust",
      "frameworks": [
        "oxc"
      ]
    }
  ]
}
"
`;
